# RustDESeq2

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  README.md  build.sh  install.sh  run_test.sh  test.sh
R/: extendr-wrappers.R
man/: RustDESeq2.Rd
src/: Makevars.in  Makevars.win.in  RustDESeq2-win.def  entrypoint.c  rust.deseq2-win.def
src/rust/: Cargo.toml
src/rust/src/: lib.rs
tests/: build.R  install.R  test.R  test_interfaces.R
